test/classes/deitz/test_inherit_mod2.good
Error: Unresolved call ':C.x' (test_inherit_mod2.chpl:18)
Candidates are:
  :_iterator__promoter.x (_chpl_adomain.chpl:398)
  :D1.x (test_inherit_mod2.chpl:4)
  :D2.x (test_inherit_mod2.chpl:8)
